--- a/tests/loaders/CMakeLists.txt
+++ b/tests/loaders/CMakeLists.txt
@@ -4,6 +4,6 @@ if (nlohmann_json_FOUND)
     target_link_libraries(Fontloader_test PRIVATE nlohmann_json::nlohmann_json)
 endif ()
 
-if (THREEPP_WITH_SVG_FEATURE AND PUGIXML_FOUND)
+if (THREEPP_WITH_SVG_FEATURE)
     add_subdirectory(svg)
 endif ()
