--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -5,9 +5,9 @@ include(CMakeFindDependencyMacro)
 find_dependency(glfw3 CONFIG)
 find_dependency(glad CONFIG)
 
-if (NOT TARGET "glfw::glfw" AND TARGET "glfw")
-    add_library(glfw::glfw ALIAS glfw)
-endif()
+#if (NOT TARGET "glfw::glfw" AND TARGET "glfw")
+#    add_library(glfw::glfw ALIAS glfw)
+#endif()
 
 include(${CMAKE_CURRENT_LIST_DIR}/threepp-targets.cmake)
 check_required_components(threepp)
