--- a/examples/misc/CMakeLists.txt
+++ b/examples/misc/CMakeLists.txt
@@ -1,9 +1,6 @@
 
-add_executable(key_listener key_listener.cpp)
-target_link_libraries(key_listener PUBLIC threepp)
-
-add_executable(mouse_listener mouse_listener.cpp)
-target_link_libraries(mouse_listener PUBLIC threepp)
+add_executable(mouse_key_listener mouse_key_listener.cpp)
+target_link_libraries(mouse_key_listener PUBLIC threepp)
 
 add_executable(raycast raycast.cpp)
 target_link_libraries(raycast PUBLIC threepp)
