--- a/examples/misc/CMakeLists.txt
+++ b/examples/misc/CMakeLists.txt
@@ -1,15 +1,14 @@
 
 add_executable(mouse_key_listener mouse_key_listener.cpp)
-target_link_libraries(mouse_key_listener PUBLIC threepp)
+target_link_libraries(mouse_key_listener PRIVATE threepp)
 
 add_executable(raycast raycast.cpp)
-target_link_libraries(raycast PUBLIC threepp)
+target_link_libraries(raycast PRIVATE threepp)
 
 add_executable(test_capabilites test_capabilites.cpp)
-target_include_directories(test_capabilites PUBLIC ${PROJECT_SOURCE_DIR}/src)
+target_include_directories(test_capabilites PRIVATE ${PROJECT_SOURCE_DIR}/src)
 target_link_libraries(test_capabilites
-        PUBLIC
-        threepp
         PRIVATE
+        threepp
         glfw::glfw
         glad::glad)
