--- a/examples/geometries/CMakeLists.txt
+++ b/examples/geometries/CMakeLists.txt
@@ -14,6 +14,9 @@ target_link_libraries(shape_geometry PRIVATE threepp)
 add_executable(convex_geometry convex_geometry.cpp)
 target_link_libraries(convex_geometry PRIVATE threepp)
 
+add_executable(heightmap heightmap.cpp)
+target_link_libraries(heightmap PRIVATE threepp)
+
 if (imgui_FOUND)
     add_executable(box_geometry box_geometry.cpp)
     target_link_libraries(box_geometry PRIVATE threepp imgui::imgui)
