clipping demo wip

--- a/examples/misc/CMakeLists.txt
+++ b/examples/misc/CMakeLists.txt
@@ -5,6 +5,11 @@ target_link_libraries(mouse_key_listener PRIVATE threepp)
 add_executable(raycast raycast.cpp)
 target_link_libraries(raycast PRIVATE threepp)
 
+if (imgui_FOUND)
+    add_executable(clipping clipping.cpp)
+    target_link_libraries(clipping PRIVATE threepp imgui::imgui)
+endif ()
+
 add_executable(test_capabilites test_capabilites.cpp)
 target_include_directories(test_capabilites PRIVATE ${PROJECT_SOURCE_DIR}/src)
 target_link_libraries(test_capabilites
