linking with glad not needed [skip ci]

--- a/examples/textures/CMakeLists.txt
+++ b/examples/textures/CMakeLists.txt
@@ -9,5 +9,5 @@ add_executable(data_texture data_texture.cpp)
 target_link_libraries(data_texture PRIVATE threepp)
 if (OpenCV_FOUND)
     add_executable(opencv_demo opencv_demo.cpp)
-    target_link_libraries(opencv_demo PRIVATE threepp glad::glad ${OpenCV_LIBRARIES})
+    target_link_libraries(opencv_demo PRIVATE threepp ${OpenCV_LIBRARIES})
 endif ()
