--- a/examples/misc/CMakeLists.txt
+++ b/examples/misc/CMakeLists.txt
@@ -10,6 +10,11 @@ if (OpenCV_FOUND)
     target_link_libraries(opencv_demo PRIVATE threepp ${OpenCV_LIBRARIES})
 endif ()
 
+if (imgui_FOUND)
+    add_executable(clipping clipping.cpp)
+    target_link_libraries(clipping PRIVATE threepp imgui::imgui)
+endif ()
+
 add_executable(test_capabilites test_capabilites.cpp)
 target_include_directories(test_capabilites PRIVATE ${PROJECT_SOURCE_DIR}/src)
 target_link_libraries(test_capabilites
