--- a/examples/misc/CMakeLists.txt
+++ b/examples/misc/CMakeLists.txt
@@ -8,6 +8,7 @@ target_link_libraries(raycast PRIVATE threepp)
 if (OpenCV_FOUND)
     add_executable(opencv_demo opencv_demo.cpp)
     target_link_libraries(opencv_demo PRIVATE threepp ${OpenCV_LIBRARIES})
+    target_include_directories(opencv_demo PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
 endif ()
 
 if (imgui_FOUND)
