--- a/examples/objects/CMakeLists.txt
+++ b/examples/objects/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_executable(instancing instancing.cpp)
 target_link_libraries(instancing PRIVATE threepp)
+target_include_directories(instancing PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
 
 add_executable(lod lod.cpp)
 target_link_libraries(lod PRIVATE threepp)
