--- a/examples/extras/CMakeLists.txt
+++ b/examples/extras/CMakeLists.txt
@@ -5,7 +5,8 @@ target_link_libraries(catmull_room_curve3 PRIVATE threepp)
 add_executable(cubic_bezier_curve curves/cubic_bezier_curve.cpp)
 target_link_libraries(cubic_bezier_curve PRIVATE threepp)
 
+add_executable(fonts core/fonts.cpp)
+target_link_libraries(fonts PRIVATE threepp)
 if (nlohmann_json_FOUND)
-    add_executable(fonts core/fonts.cpp)
-    target_link_libraries(fonts PRIVATE threepp nlohmann_json::nlohmann_json)
+    target_link_libraries(fonts PRIVATE nlohmann_json::nlohmann_json)
 endif ()
