--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -146,6 +146,7 @@ set(publicHeaders
         "threepp/objects/LineSegments.hpp"
         "threepp/objects/LOD.hpp"
         "threepp/objects/Mesh.hpp"
+        "threepp/objects/ObjectWithMorphTargetInfluences.hpp"
         "threepp/objects/Sky.hpp"
         "threepp/objects/Sprite.hpp"
         "threepp/objects/Points.hpp"
@@ -211,6 +212,7 @@ set(privateHeaders
         "threepp/renderers/gl/GLGeometries.hpp"
         "threepp/renderers/gl/GLLights.hpp"
         "threepp/renderers/gl/GLMaterials.hpp"
+        "threepp/renderers/gl/GLMorphTargets.hpp"
         "threepp/renderers/gl/GLObjects.hpp"
         "threepp/renderers/gl/GLProperties.hpp"
         "threepp/renderers/gl/GLProgram.hpp"
