--- a/examples/misc/CMakeLists.txt
+++ b/examples/misc/CMakeLists.txt
@@ -18,3 +18,8 @@ if (imgui_FOUND)
     add_executable(morphtargets morphtargets.cpp)
     target_link_libraries(morphtargets PRIVATE threepp imgui::imgui)
 endif ()
+
+if (assimp_FOUND)
+    add_executable(morphtargets_sphere morphtargets_sphere.cpp)
+    target_link_libraries(morphtargets_sphere PRIVATE threepp assimp::assimp)
+endif ()
