--- a/examples/misc/CMakeLists.txt
+++ b/examples/misc/CMakeLists.txt
@@ -14,4 +14,12 @@ endif ()
 if (imgui_FOUND)
     add_executable(clipping clipping.cpp)
     target_link_libraries(clipping PRIVATE threepp imgui::imgui)
+
+    add_executable(morphtargets morphtargets.cpp)
+    target_link_libraries(morphtargets PRIVATE threepp imgui::imgui)
+endif ()
+
+if (assimp_FOUND)
+    add_executable(morphtargets_sphere morphtargets_sphere.cpp)
+    target_link_libraries(morphtargets_sphere PRIVATE threepp assimp::assimp)
 endif ()
