--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ set(publicHeaders
         "threepp/constants.hpp"
         "threepp/threepp.hpp"
 
+        "threepp/audio/Audio.hpp"
+        "threepp/audio/AudioListener.hpp"
+
         "threepp/canvas/Canvas.hpp"
         "threepp/canvas/WindowSize.hpp"
 
