--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,6 +89,7 @@ set(publicHeaders
         "threepp/helpers/PlaneHelper.hpp"
         "threepp/helpers/PointLightHelper.hpp"
         "threepp/helpers/PolarGridHelper.hpp"
+        "threepp/helpers/SkeletonHelper.hpp"
         "threepp/helpers/SpotLightHelper.hpp"
 
         "threepp/loaders/loaders.hpp"
@@ -139,6 +140,7 @@ set(publicHeaders
         "threepp/math/Vector4.hpp"
         "threepp/math/Quaternion.hpp"
 
+        "threepp/objects/Bone.hpp"
         "threepp/objects/Group.hpp"
         "threepp/objects/InstancedMesh.hpp"
         "threepp/objects/Line.hpp"
@@ -148,6 +150,8 @@ set(publicHeaders
         "threepp/objects/Mesh.hpp"
         "threepp/objects/ObjectWithMorphTargetInfluences.hpp"
         "threepp/objects/Sky.hpp"
+        "threepp/objects/Skeleton.hpp"
+        "threepp/objects/SkinnedMesh.hpp"
         "threepp/objects/Sprite.hpp"
         "threepp/objects/Points.hpp"
         "threepp/objects/Reflector.hpp"
@@ -296,6 +300,7 @@ set(sources
         "threepp/helpers/PlaneHelper.cpp"
         "threepp/helpers/PointLightHelper.cpp"
         "threepp/helpers/PolarGridHelper.cpp"
+        "threepp/helpers/SkeletonHelper.cpp"
         "threepp/helpers/SpotLightHelper.cpp"
 
         "threepp/input/PeripheralsEventSource.cpp"
@@ -363,6 +368,8 @@ set(sources
         "threepp/objects/InstancedMesh.cpp"
         "threepp/objects/Mesh.cpp"
         "threepp/objects/Points.cpp"
+        "threepp/objects/Skeleton.cpp"
+        "threepp/objects/SkinnedMesh.cpp"
         "threepp/objects/Sky.cpp"
         "threepp/objects/Sprite.cpp"
         "threepp/objects/Reflector.cpp"
