--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -133,6 +133,7 @@ set(publicHeaders
         "threepp/math/float_view.hpp"
         "threepp/math/Frustum.hpp"
         "threepp/math/ImprovedNoise.hpp"
+        "threepp/math/Interpolant.hpp"
         "threepp/math/Line3.hpp"
         "threepp/math/MathUtils.hpp"
         "threepp/math/Matrix3.hpp"
@@ -345,6 +346,7 @@ set(sources
         "threepp/math/Euler.cpp"
         "threepp/math/Frustum.cpp"
         "threepp/math/ImprovedNoise.cpp"
+        "threepp/math/Interpolant.cpp"
         "threepp/math/Line3.cpp"
         "threepp/math/MathUtils.cpp"
         "threepp/math/Matrix3.cpp"
