--- a/examples/extras/CMakeLists.txt
+++ b/examples/extras/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(fonts PRIVATE threepp)
 if (nlohmann_json_FOUND)
     target_link_libraries(fonts PRIVATE nlohmann_json::nlohmann_json)
 endif ()
+if (imgui_FOUND)
+    target_link_libraries(fonts PRIVATE imgui::imgui)
+endif ()
