--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,6 +10,7 @@ endif ()
 add_subdirectory(animation)
 add_subdirectory(audio)
 add_subdirectory(bullet)
+add_subdirectory(controls)
 add_subdirectory(extras)
 add_subdirectory(geometries)
 add_subdirectory(helpers)
