--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_test_executable(Box3_test)
 add_test_executable(Color_test)
+add_test_executable(Cylindrical_test)
 add_test_executable(Frustum_test)
 add_test_executable(Sphere_test)
 add_test_executable(Spherical_test)
