--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -1,4 +1,5 @@
 
+add_test_executable(Box2_test)
 add_test_executable(Box3_test)
 add_test_executable(Color_test)
 add_test_executable(Cylindrical_test)
