add imgui framebuffer example
#closes 185

--- a/examples/textures/CMakeLists.txt
+++ b/examples/textures/CMakeLists.txt
@@ -7,3 +7,10 @@ target_link_libraries(texture3d PRIVATE threepp)
 
 add_executable(data_texture data_texture.cpp)
 target_link_libraries(data_texture PRIVATE threepp)
+
+if (imgui_FOUND)
+
+    add_executable(imgui_framebuffer.cpp imgui_framebuffer.cpp)
+    target_link_libraries(imgui_framebuffer.cpp threepp imgui::imgui)
+
+endif ()
