--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -415,10 +415,14 @@ include("${PROJECT_SOURCE_DIR}/cmake/embed.cmake")
 add_library(threepp ${sources} ${privateHeaders} ${publicHeadersFull} "${generatedSourcesDir}/threepp/renderers/shaders/ShaderChunk.cpp")
 add_library(threepp::threepp ALIAS threepp)
 target_compile_features(threepp PUBLIC cxx_std_17)
-target_link_libraries(threepp
-        PRIVATE
-        glad::glad
-        glfw::glfw)
+if (NOT DEFINED EMSCRIPTEN)
+    target_link_libraries(threepp
+            PRIVATE
+            glad::glad
+            glfw::glfw
+    )
+endif ()
+
 if (UNIX)
     target_link_libraries(threepp PRIVATE pthread)
 endif ()
@@ -431,3 +435,9 @@ target_include_directories(threepp
         "${gltext_INCLUDE_DIR}"
         "${generatedSourcesDir}"
         "${CMAKE_CURRENT_SOURCE_DIR}")
+if (EMSCRIPTEN)
+    target_include_directories(threepp
+        PRIVATE
+        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../external/glfw-3.2.1/include"
+    )
+endif ()
