--- a/examples/objects/CMakeLists.txt
+++ b/examples/objects/CMakeLists.txt
@@ -1,34 +1,11 @@
 
-add_executable(instancing instancing.cpp)
-target_link_libraries(instancing PRIVATE threepp)
+add_example(NAME "instancing" LINK_IMGUI)
 target_include_directories(instancing PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
-if (imgui_FOUND)
-    target_link_libraries(instancing PRIVATE imgui::imgui)
-endif ()
 
-add_executable(lod lod.cpp)
-target_link_libraries(lod PRIVATE threepp)
+add_example(NAME "lod")
+add_example(NAME "sprite")
+add_example(NAME "points")
+add_example(NAME "water" TRY_LINK_IMGUI)
+add_example(NAME "bones" LINK_IMGUI)
+add_example(NAME "decal" LINK_IMGUI LINK_ASSIMP)
 
-add_executable(water water.cpp)
-target_link_libraries(water PRIVATE threepp)
-
-add_executable(sprite sprite.cpp)
-target_link_libraries(sprite PRIVATE threepp)
-
-add_executable(points points.cpp)
-target_link_libraries(points PRIVATE threepp)
-
-if (imgui_FOUND)
-    add_executable(bones bones.cpp)
-    target_link_libraries(bones PRIVATE threepp imgui::imgui)
-
-    target_link_libraries(water PRIVATE imgui::imgui)
-endif ()
-
-if (assimp_FOUND)
-    add_executable(decal decal.cpp)
-    target_link_libraries(decal PRIVATE threepp assimp::assimp)
-    if (imgui_FOUND)
-        target_link_libraries(decal PRIVATE imgui::imgui)
-    endif ()
-endif ()
