--- a/examples/projects/Crane3R/CMakeLists.txt
+++ b/examples/projects/Crane3R/CMakeLists.txt
@@ -1,8 +1,3 @@
 
-add_executable(Crane3R main.cpp Crane3R.cpp)
-target_link_libraries(Crane3R PRIVATE threepp)
+add_example(NAME "Crane3R" SOURCES main.cpp Crane3R.cpp TRY_LINK_IMGUI)
 target_include_directories(Crane3R PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
-
-if (imgui_FOUND)
-    target_link_libraries(Crane3R PRIVATE imgui::imgui)
-endif ()
