--- a/examples/projects/Youbot/CMakeLists.txt
+++ b/examples/projects/Youbot/CMakeLists.txt
@@ -1,11 +1,6 @@
 
-add_executable(Youbot youbot.cpp)
-target_link_libraries(Youbot PRIVATE threepp assimp::assimp)
+add_example(NAME "youbot" LINK_ASSIMP)
 
-if (imgui_FOUND)
+add_example(NAME "youbot_kine" LINK_IMGUI LINK_ASSIMP)
+target_include_directories(youbot_kine PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
 
-    add_executable(Youbot_kine youbot_kine.cpp)
-    target_link_libraries(Youbot_kine PRIVATE threepp imgui::imgui assimp::assimp)
-    target_include_directories(Youbot_kine PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
-
-endif ()
