--- a/examples/projects/Crane3R/CMakeLists.txt
+++ b/examples/projects/Crane3R/CMakeLists.txt
@@ -1,3 +1,5 @@
 
-add_example(NAME "Crane3R" SOURCES main.cpp Crane3R.cpp TRY_LINK_IMGUI)
-target_include_directories(Crane3R PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
+add_example(NAME "crane3R" SOURCES main.cpp Crane3R.cpp TRY_LINK_IMGUI)
+if (TARGET "crane3R")
+    target_include_directories("crane3R" PRIVATE "${PROJECT_SOURCE_DIR}/examples/libs")
+endif ()
