--- a/examples/audio/CMakeLists.txt
+++ b/examples/audio/CMakeLists.txt
@@ -1,5 +1,7 @@
 
 if (MINIAUDIO_INCLUDE_DIRS)
     add_example(NAME "audio" LINK_IMGUI)
-    target_include_directories("audio" PRIVATE "${MINIAUDIO_INCLUDE_DIRS}")
+    if (TARGET "audio")
+        target_include_directories("audio" PRIVATE "${MINIAUDIO_INCLUDE_DIRS}")
+    endif ()
 endif ()
