avoid absolute paths for embed
in case of whitespace in path

--- a/examples/loaders/CMakeLists.txt
+++ b/examples/loaders/CMakeLists.txt
@@ -2,4 +2,4 @@
 add_example(NAME "stl_loader")
 add_example(NAME "obj_loader")
 add_example(NAME "assimp_loader" LINK_ASSIMP)
-add_example(NAME "svg_loader" LINK_IMGUI LINK_XML)
+add_example(NAME "svg_loader" TRY_LINK_IMGUI LINK_XML)
