--- a/examples/textures/CMakeLists.txt
+++ b/examples/textures/CMakeLists.txt
@@ -1,5 +1,12 @@
 
-add_example(NAME "texture2d")
-add_example(NAME "texture3d")
-add_example(NAME "data_texture")
-add_example(NAME "imgui_framebuffer" LINK_IMGUI)
+add_example(NAME "texture3d" WEB)
+add_example(NAME "texture2d" WEB WEB_EMBED
+        "../data/textures/crate.gif@data/textures/crate.gif"
+        "../data/textures/checker.png@data/textures/checker.png"
+        "../data/textures/brick_bump.jpg@data/textures/brick_bump.jpg"
+)
+add_example(NAME "data_texture" WEB WEB_EMBED
+        "../data/textures/checker.png@data/textures/checker.png"
+        "../data/textures/crate.gif@data/textures/crate.gif"
+)
+add_example(NAME "imgui_framebuffer" LINK_IMGUI WEB)
