--- a/examples/extras/core/CMakeLists.txt
+++ b/examples/extras/core/CMakeLists.txt
@@ -1,4 +1,4 @@
 
 add_example(NAME "fonts" TRY_LINK_IMGUI LINK_JSON WEB WEB_EMBED
-    "${CMAKE_SOURCE_DIR}/data/fonts@data/fonts"
+    "../data/fonts@data/fonts"
 )
