--- a/examples/extras/curves/CMakeLists.txt
+++ b/examples/extras/curves/CMakeLists.txt
@@ -1,3 +1,3 @@
 
-add_example(NAME "catmull_room_curve3")
-add_example(NAME "cubic_bezier_curve")
+add_example(NAME "catmull_room_curve3" WEB)
+add_example(NAME "cubic_bezier_curve" WEB)
